# Conways-Game-of-Life

./: .gitignore  CMakeLists.txt  Conways-Game-Of-Life.cpp  Conways-Game-Of-Life.h  README.md
lib/: CMakeLists.txt
lib/glad/include/glad/: gl.h  glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/cells/: CMakeLists.txt  cell.cpp  cell.h
src/shaders/: CMakeLists.txt  shader.cpp  shader.h
src/shaders/shader_src/: CMakeLists.txt  SimpleShader.sprj
src/shaders/shader_src/shaders/: SimpleShaderPS.glsl  SimpleShaderVS.glsl
src/window/: CMakeLists.txt  window.cpp  window.h
